--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   dengue-dashboard:
-    build: .
+    build: https://github.com/momustafahmed/dengue-thailand-ews.git
     ports:
       - "8501:8501"
     environment:
